--------------------
Bazaar Release Notes
--------------------

.. contents::

IN DEVELOPMENT
--------------

  CHANGES:

  IMPROVEMENTS:

  BUG FIXES:

    * ``WorkingTree4`` trees will now correctly report missing-and-new
      paths in the output of ``iter_changes``. (Robert Collins)

  API CHANGES:

    * Exporters now take 4 parameters. (Robert Collins)

    * ``Tree.iter_changes`` will now return False for the content change
      field when a file is missing in the basis tree and not present in
      the target tree. Previously it returned True unconditionally.
      (Robert Collins)

  TESTING:

    * ``addCleanup`` now takes ``*arguments`` and ``**keyword_arguments``
      which are then passed to the cleanup callable as it is run. In
      addition, addCleanup no longer requires that the callables passed to
      it be unique. (Jonathan Lange)

  INTERNALS:

    * ``bzrlib.diff.DiffTree.show_diff`` now skips changes where the kind
      is unknown in both source and target.
      (Robert Collins, Aaron Bentley)


bzr 1.6rc2 2008-08-13
---------------------

This release candidate has a few minor bug fixes, and some regression
fixes for Windows.

    * ``bzr export`` can now export a subdirectory of a project.
      (Robert Collins)

  BUG FIXES:

    * ``bzr upgrade`` on remote branches accessed via bzr:// and
      bzr+ssh:// now works.  (Andrew Bennetts)

    * Change the ``get_format_description()`` strings for
      ``RepositoryFormatKnitPack5`` et al to be single line messages.
      (Aaron Bentley)

    * Fix for a regression on Win32 where we would try to call
      ``os.listdir()`` on a file and not catch the exception properly.
      (Windows raises a different exception.) This would manifest in
      places like ``bzr rm file`` or ``bzr switch``.
      (Mark Hammond, John Arbash Meinel)

    * ``Inventory.copy()`` was failing to set the revision property for
      the root entry. (Jelmer Vernooij)
